# multivariate_analysis

./: README.md  bdt_score.C  bdt_score_0nu_2nu.C  classification.C  classification_application.C  classification_application_simple.C  classification_simple.C  comparison_spectra_calibration.C  config_sensitivity.h  mva_data_selection.cc  pseudo_halflives_distrib.C  roi.C  script_application.sh  script_application_0nu_2nu.sh  script_application_fast.sh  script_application_fast_0nu_2nu.sh  script_sensitivity_pseudo.sh  sensitivity.C  sensitivity_0nu_2nu.C  sensitivity_pseudo.C  spectra_2e.C  spectra_pseudo.C  time_evolution.C
halflife/: sensitivity_1e.C  spectra_1e.C
pseudo_tree/: script_merge_pseudos.sh  script_merge_sub_samples.sh
sensitivity/: CMakeLists.txt  activity_accuracy_exposure.C  activity_meas_accuracy.C  analysis_config.cc  analysis_config.cxx  analysis_config.h  channel_selection.cc  channel_selection.cxx  channel_selection.h  dup_remover.cc  main_sensitivity.cxx  multi_fit.cxx  multi_fit.h  multi_fit_bis.cc  pseudo_generator.cc  pseudo_generator.cxx  pseudo_generator.h  sensitivity_constants.h  sensitivity_measurements.h  stats_tools.h  topology_distribution.cc
sensitivity/source_bi214/: pseudo_generator.cxx  sensitivity_constants.h  source_bi214_fit.C  source_bi214_selection.C  stats_tools.h
sensitivity/submit/tl_bi/: multivariate_study.conf
submit/2nu/: multivariate_study.conf
submit/bi214/: multivariate_study.conf
submit/radon/: multivariate_study.conf
submit/tl208/: multivariate_study.conf
